# data-analysis-plotting-tool

./: .buildinfo  Bool.html  LICENSE.txt  README.md  genindex.html  index.html  modules.html  py-modindex.html  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  tox.ini
.doctrees/: Bool.doctree  environment.pickle  index.doctree  modules.doctree
.doctrees/autoapi/: index.doctree
.doctrees/notebooks/: example.doctree
.github/workflows/: docs.yml  pylint.yml  tests.yml
_modules/: index.html
_modules/data_analysis_plotting_tools/: Bool.html
_sources/autoapi/: index.rst
autoapi/: index.html
autoapi/data_analysis_plotting_tools/: index.html
autoapi/usage_example/: index.html
data-analysis-plotting-tool/: main.py
data_analysis_plotting_tool/: main.py
data_analysis_plotting_tools/: AnalysisTool.py  Bool.py  PlottingTool.py  PreprocessingTool.py
data_analysis_plotting_tools/examples/: usage_example.ipynb  usage_example.py
docs/source/: AnalysisTool.rst  PlottingTool.rst  analysis_plotting_tools.rst  conf.py  data_analysis_plotting_tools.rst  index.rst  modules.rst
doctrees/: environment.pickle  modules.doctree
doctrees/autoapi/: index.doctree
doctrees/notebooks/: example.doctree
examples/: usage_example.ipynb  usage_example.py
historical_weather_data/: acquire_data.py
html/: .buildinfo  Bool.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
html/_modules/: index.html
notebooks/: example.html
tests/: test_AnalysisTool_PlottingTool.py
(+45 files in other folders)
