[metadata]
name = data-analysis-plotting-tools
description = Tools to facilitate data analysis and plotting.
url = https://github.com/jpbeerhold/data-analysis-plotting-tools
author = Ananya Pal, Jannis Philipp Beerhold
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11.7
    Programming Language :: Python :: 3.12.0

[options]
python_requires = >= 3.6
packages = data_analysis_plotting_tools
install_requires =
    matplotlib >= 3.5.1
    numpy >= 1.23
    pandas >= 1.4
    polars >= 0.19.19
    Requests >= 2.31.0
    pyarrow >= 11.0.0
    scipy >= 1.8
    seaborn >= 0.13.2
    matplotlib >= 3.5
    Requests >= 2.31.0
    python-dateutil >= 2.8.2
    bokeh >= 3.3.3
    flit-core >= 3.2
    scikit-learn >= 1.4
    statsmodels >= 0.14.1

[options.extras_require]
testing =
    tox >= 4.10.0
    pytest >= 7.1.2
    pytest-cov >= 4.1.0

docs =
    sphinx >= 7.2.6
    sphinx-autoapi >= 3.0.0
    sphinx-book-theme >= 0.2.0
    numpydoc >= 1.2.1
    myst_nb >= 0.13.1
    sphinx_design >= 0.4.1
